welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:16: error: unclosed string literal
				if (litMessage=="
                                                ^